--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
+    "use-shopping-cart": "^3.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
