--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-id-swiper": "^4.0.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "rsuite": "^5.48.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "use-shopping-cart": "^3.1.8",
